# fastapi-ecommerce-postgresql

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
apps/api_v1/: __init__.py  routes.py
apps/api_v1/category/: __init__.py  configuration.py  model.py  response_message.py  route.py  schema.py  view.py
apps/api_v1/organization/: __init__.py  model.py  response_message.py  route.py  schema.py
apps/api_v1/product/: __init__.py  configuration.py  model.py  response_message.py  route.py  schema.py  view.py
apps/api_v1/role/: __init__.py  configuration.py  model.py  response_message.py  route.py  schema.py
apps/api_v1/user/: __init__.py  configuration.py  helper.py  model.py  response_message.py  route.py  schema.py  view.py
apps/auth/: __init__.py  configuration.py  response_message.py  route.py  schema.py  view.py
apps/base/: configuration.py  schema.py  view.py
apps/email/: __init__.py  configuration.py  helper.py  response_message.py  route.py  schema.py  send_email.py  view.py
core/: __init__.py  configuration.py  middlewares.py  route.py  schema.py  security.py
database/: __init__.py  base.py  connection.py  init_database.py  session.py
migrations/: env.py
static/email/: email.html
